# microstrain_bit

./: .gitmodules  CMakeLists.txt  README.md  bit_example.cpp
.devcontainer/: Dockerfile  Dockerfile.dev  build.sh  devcontainer.json
.devcontainer/.vscode-docker/: c_cpp_properties.json
src/: bit_utils.hpp  gq7_bit.hpp  microstrain_bit.cpp
